[package]
name = "remote-relay-dht-smoke"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "test-remote-relay-dht"
path = "main.rs"

[[bin]]
name = "test-remote-relay-blind"
path = "blind_connect.rs"

[dependencies]
hex = "0.4"
libudx = "1.3.1"
aven-p2p = { path = "../../libs/aven-p2p", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
