[package]
name = "avenos-schema-hash"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
groove = { package = "jazz-tools", version = "2.0.0-alpha.0", default-features = false, features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
jazz-tools = { path = "../../third_party/jazz-tools" }
