[package]
name = "avenos-schema-hash"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
groove = { package = "aven-db", version = "2.0.0-alpha.50", default-features = false, features = ["client-p2p"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
aven-db = { path = "../../libs/aven-db" }
