[package]
name = "aven-os-app"
version = "0.0.1"
description = "Aven OS desktop shell"
authors = ["Aven"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "aven_os_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aven-os-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
url = "2"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
