[package]
name = "aven-os-app"
version = "0.0.1"
description = "Aven OS desktop shell"
authors = ["Aven"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "aven_os_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aven-os-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http = "1"
groove = { package = "jazz-tools", version = "2.0.0-alpha.0", default-features = false, features = ["client"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri-plugin-self = { path = "../../../projects/tauri-plugin-self" }
base64 = "0.22"
p256 = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
biscuit-auth = { version = "6", features = ["datalog-macro"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
hkdf = "0.12"
multibase = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
