[package]
name = "aven-os-app"
version = "0.0.1"
description = "Aven OS desktop shell"
authors = ["Aven"]
edition = "2021"
rust-version = "1.88"
[lib]
name = "aven_os_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aven-os-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http = "1"
async-trait = "0.1"
groove = { package = "jazz-tools", version = "2.0.0-alpha.0", default-features = false, features = ["client", "peer-transport"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri-plugin-peer = { path = "../../../projects/tauri-plugin-peer" }
tauri-plugin-self = { path = "../../../projects/tauri-plugin-self" }
base64 = "0.22"
hex = "0.4"
p256 = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
biscuit-auth = { version = "6", features = ["datalog-macro"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
hkdf = "0.12"
multibase = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
env_logger = "0.11.10"
tracing-log = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }

# Vendored jazz-tools@2.0.0-alpha.0 with a single AvenOS-local patch:
# `QueryManager` write paths used to `.map_err(|_| QueryError::ObjectNotFound(id))`,
# which collapses BranchNotFound / ParentNotFound / StorageError into a single
# misleading "ObjectNotFound" string. The vendored copy preserves the real
# upstream error via `QueryError::InternalError(format!("{:?}", e))` so we can
# diagnose the "row visible on read, write fails" failure mode. Pin to local
# path to keep dev iteration fast; review the diff before bumping versions.
#
# Vendored peeroxide@1.3.1 + peeroxide-dht@1.3.1 with additive patches:
# - `SecretStream::into_split()` — independent read/write halves for the Groove bridge.
# - `JoinOpts::fast_refresh` — 3s DHT refresh + 2s connect retry cap on invite topics.
# Wire compatibility with Node.js Hypercore/Hyperswarm/protomux is preserved.
[patch.crates-io]
jazz-tools = { path = "../../../third_party/jazz-tools" }
peeroxide = { path = "../../../third_party/peeroxide" }
peeroxide-dht = { path = "../../../third_party/peeroxide-dht" }
